--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/WEB-INF/pages/contactus.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/login.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/viewallpets.jsp=UTF-8
 encoding/<project>=UTF-8
